Updating Kryo to 5.0.0-RC9 (#3593)